# org

./: BUILD.bazel  go.mod  go.sum  repos.bzl
cmd/helpers/: BUILD.bazel
cmd/merge/: main.go
cmd/restrictions/: BUILD.bazel
config/: restrictions.yaml
config/kubernetes/: org.yaml
config/kubernetes-client/: org.yaml
config/kubernetes-csi/: org.yaml
config/kubernetes-sigs/: org.yaml
config/kubernetes-sigs/provider-azure/: teams.yaml
config/kubernetes-sigs/sig-api-machinery/: teams.yaml
config/kubernetes-sigs/sig-apps/: teams.yaml
config/kubernetes-sigs/sig-auth/: teams.yaml
config/kubernetes-sigs/sig-aws/: teams.yaml
config/kubernetes-sigs/sig-cli/: teams.yaml
config/kubernetes-sigs/sig-cloud-provider/: teams.yaml
config/kubernetes-sigs/sig-cluster-lifecycle/: teams.yaml
config/kubernetes-sigs/sig-contributor-experience/: teams.yaml
config/kubernetes-sigs/sig-docs/: teams.yaml
config/kubernetes-sigs/sig-ibmcloud/: teams.yaml
config/kubernetes-sigs/sig-instrumentation/: teams.yaml
config/kubernetes-sigs/sig-multicluster/: teams.yaml
config/kubernetes-sigs/sig-network/: teams.yaml
config/kubernetes-sigs/sig-node/: teams.yaml
config/kubernetes-sigs/sig-release/: teams.yaml
config/kubernetes-sigs/sig-scheduling/: teams.yaml
config/kubernetes-sigs/sig-service-catalog/: teams.yaml
config/kubernetes-sigs/sig-storage/: teams.yaml
config/kubernetes-sigs/sig-testing/: teams.yaml
config/kubernetes-sigs/sig-usability/: teams.yaml
config/kubernetes-sigs/sig-windows/: teams.yaml
hack/: verify-all.sh
(+10 files in other folders)
